<resources>
    <!--title-->
    <string name="app_name">ScooterSharing</string>

    <!-- for starting the ride-->
    <string name="start_ride_name_text">Enter scooter name</string>
    <string name="start_ride_location_text">Enter your location</string>
    <string name="start_ride_button">Start ride</string>
    <string name="show_list_button">Show scooters</string>
    <!-- for updating the ride-->
    <string name="update_ride_name_text">The current scooter name</string>
    <string name="update_ride_location_text">The current scooter location</string>
    <string name="update_ride_button">Update ride</string>
    <string name="list_rides_title">Scooters</string>
    <string name="delete_ride_button">Delete ride</string>
    <string name="confirm_delete_ride_button">Confirm</string>
    <string name="cancel_delete_ride_button">Cancel</string>
    <string name="title_delete_ride_alert">Confirm delete ride</string>
    <string name="support_text_delete_ride_alert">Are you sure you want to delete this ride?</string>
    <string name="sign_out_button">Sign out</string>

    <string name="find_nearest_scooter_button">Find nearest Scooter</string>

    <!-- for editing the scooter name-->
    <string name="edit_name">Edit name</string>
    <string name="edit_location">Edit location</string>
    <string name="dialog_update_title">Update an entry</string>
    <string name="dialog_update_message">Update a selected data from the database</string>
    <string name="update_button">Update</string>
    <string name="cancel_button">Cancel</string>
    <string name="action_sign_out">Sign out</string>
    <string name="content_description_sign_out">Sign out</string>
    <string name="dialog_title">Adding new entry</string>
    <string name="dialog_message">Create a new data in the database</string>
    <string name="add_button">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="picture_button">Picture</string>
    <string name="take_scooter_photo">Take photo</string>
    <!-- for the map fragment !-->
    <string name="show_map">Show map</string>
    <string name="latitude_text">Latitude</string>
    <string name="longitude_text">Longitude</string>

    <string name="x_value">x-axis</string>
    <string name="y_value">y-axis</string>
    <string name="z_value">z-axis</string>


    <string name="time_text">Time</string>
    <string name="address_text">Address</string>
    <string name="content_description_location">Location</string>
    <string name="location_updated">Location Updated: %1$s</string>

    <string name="scan">Scan</string>


    <string name="scooterInfo">Scooter acceleration</string>


    <string name="start_ride_dialog_title">Start ride</string>
    <string name="start_ride_dialog_support">Are you sure you want to start ride with</string>
    <string name="start_ride_confirm">Confirm</string>
    <string name="start_ride_cancel">Cancel</string>

    <string name="scooter_is_used_title">Scooter is being used</string>
    <string name="scooter_is_used_ok">OK</string>


    <string name="content_description_firebase">ML Kit for Firebase</string>
    <string name="content_description_camera">Camera</string>

</resources>