<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/app_name"/>

    <Button
        android:id="@+id/fragmentQR_button"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/start_ride_button" />

    <!-- Start button-->
    <Button
        android:id="@+id/show_list_button"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/show_list_button" />

    <!-- Start button-->
    <Button
        android:id="@+id/show_map"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/show_map" />

        <!-- <Button
            android:id="@+id/picture_button"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:text="@string/picture_button" /> -->


    <Button
        android:id="@+id/fragmentScooterInfo_button"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/scooterInfo" />
    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:text="@string/sign_out_button" />

</LinearLayout>
</ScrollView>