<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/app_name"/>

    <!-- Start button-->
    <Button
        android:id="@+id/main_start_ride_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/start_ride_button" />


    <Button
        android:id="@+id/main_update_ride_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_ride_button" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/list_item" />

</LinearLayout>
