<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:id="@+id/latitude_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/latitude_text"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/latitude_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/longitude_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/longitude_text"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/longitude_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/time_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/time_text"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/time_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/address_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:text="@string/address_text"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            />

    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>
